objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Benefits_Covered__c</fullName>
        <label>Additional Benefits Covered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legal Support</fullName>
                </value>
                <value>
                    <fullName>Remote Consultation</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Tele Medicine</fullName>
                </value>
                <value>
                    <fullName>Lab Services</fullName>
                </value>
                <value>
                    <fullName>Nurse/Caretaker</fullName>
                </value>
                <value>
                    <fullName>Spiritual/Social Services</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Medical Equipment Support</fullName>
                </value>
                <value>
                    <fullName>Bereavement Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alcohol_Abuse__c</fullName>
        <label>Alcohol Abuse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergies__c</fullName>
        <label>Allergies</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_of_Residence__c</fullName>
        <label>Area of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rural</fullName>
                </value>
                <value>
                    <fullName>Small Metro</fullName>
                </value>
                <value>
                    <fullName>Large Metro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auth_Category__c</fullName>
        <label>Auth Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DME</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auth_Type__c</fullName>
        <label>Auth Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavioural_therapy__c</fullName>
        <label>Behavioural therapy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBT__c</fullName>
        <label>CBT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPT_Code__c</fullName>
        <label>CPT Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarePro_Intervention__c</fullName>
        <description>This is the value provided by the CarePro Algorithm. It will be populated by REST Api call from the Node.js engine</description>
        <label>Proactive Intervention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB__c</fullName>
        <label>DB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Depression__c</fullName>
        <label>Depression</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disease__c</fullName>
        <label>Disease Condition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bariatric Surgery</fullName>
                </value>
                <value>
                    <fullName>Morbid Obesity</fullName>
                </value>
                <value>
                    <fullName>Opioid Addiction</fullName>
                </value>
                <value>
                    <fullName>Diabetic</fullName>
                </value>
                <value>
                    <fullName>Prone to Stress</fullName>
                </value>
                <value>
                    <fullName>Complications</fullName>
                </value>
                <value>
                    <fullName>Heart Patient</fullName>
                </value>
                <value>
                    <fullName>Insulin Pump With CGM</fullName>
                </value>
                <value>
                    <fullName>Geriatric Care</fullName>
                </value>
                <value>
                    <fullName>Elevated Blood Sugar</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure</fullName>
                </value>
                <value>
                    <fullName>Heartburn</fullName>
                </value>
                <value>
                    <fullName>Chronic obstructive pulmonary disease (COPD)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Visit__c</fullName>
        <label>ER Visit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligibility_Span__c</fullName>
        <label>Eligibility Span</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible__c</fullName>
        <label>Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FindNearBy__c</fullName>
        <label>Find_Near_By</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Fitbit_Access_Token__c</fullName>
        <label>Fitbit Access Token</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fitbit_Refresh_Token__c</fullName>
        <label>Fitbit Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Healthcare plan for this patient</description>
        <inlineHelpText>Healthcare plan for this patient</inlineHelpText>
        <label>Care Plan</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>PatientAccounts</relationshipLabel>
        <relationshipName>PatientAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EnrollmentType__c</fullName>
        <label>Enrollment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dual</fullName>
                </value>
                <value>
                    <fullName>NonDual</fullName>
                    <default>true</default>
                    <label>NonDual</label>
                </value>
                <value>
                    <fullName>FBDual</fullName>
                </value>
                <value>
                    <fullName>PBDual</fullName>
                </value>
                <value>
                    <fullName>ESRD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IndividualId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique ID that relates this individual&apos;s account record to its contact record.</description>
        <label>Individual ID</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IndividualType__c</fullName>
        <description>Individual Type</description>
        <label>Individual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Institution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a patient is in a institution.</description>
        <inlineHelpText>Indicates whether a patient is in a institution.</inlineHelpText>
        <label>Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LowIncome__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a patient falls within low income guidelines.</description>
        <inlineHelpText>Indicates whether a patient falls within low income guidelines.</inlineHelpText>
        <label>Low Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicaidEligibilityStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a patient is eligible for medicaid.</description>
        <inlineHelpText>Indicates whether a patient is eligible for medicaid.</inlineHelpText>
        <label>Medicaid Eligibility Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicalRecordNumber__c</fullName>
        <description>The medical record number is organization specific. The number is used by the hospital as a systematic documentation of a patient´s medical history and care during each hospital stay.</description>
        <label>Medical Record Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicareEnrollee__c</fullName>
        <description>New member or continued from previous year.</description>
        <inlineHelpText>New member or continued from previous year.</inlineHelpText>
        <label>Medicare Enrollee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Enrollee</fullName>
                </value>
                <value>
                    <fullName>Continued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__OREC__c</fullName>
        <description>Original Reason for Medicare Entitlement</description>
        <label>OREC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PayerType__c</fullName>
        <label>Payer Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Primary Contact)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <description>Unique external id</description>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TaxId__c</fullName>
        <label>TaxId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Helath_Plan_Id__c</fullName>
        <label>Health Plan ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helath_Plan__c</fullName>
        <label>Health Plan</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Illegal_drug_abuse__c</fullName>
        <label>Illegal drug abuse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsMedicare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMedicare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jawbone_Access_Token__c</fullName>
        <label>Jawbone Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jawbone_Refresh_Token__c</fullName>
        <label>Jawbone Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jawbone_XID__c</fullName>
        <externalId>true</externalId>
        <label>Jawbone XID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level I</fullName>
                </value>
                <value>
                    <fullName>Level II</fullName>
                </value>
                <value>
                    <fullName>Level III</fullName>
                </value>
                <value>
                    <fullName>Level IV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MME_Calculator__c</fullName>
        <formula>IF( MME_Score__c &gt;90 , &apos;High&apos;, IF( AND((MME_Score__c &gt; 50),(MME_Score__c &lt; 90)), &apos;Medium&apos; , &apos;Low&apos; ))</formula>
        <label>MME Calculator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MME_Codeine__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Chemical</description>
        <label>Codeine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MME_Fentanyl__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fentanyl (mcg/hr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MME_Hydrocodone__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hydrocodone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MME_Hydromorphone__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hydromorphone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MME_Methadone__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Methadone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MME_Morphine__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Morphine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MME_Oxycodone__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oxycodone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MME_Oxymorphone__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oxymorphone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MME_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MME Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MME_Tramadol__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tramadol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPR_Status__c</fullName>
        <formula>IF(MPR__c&lt;30, IMAGE(&quot;/servlet/servlet.FileDownload?file=01536000001TIp4&quot;,&quot;Red&quot;,25,25), 
(IF( AND(MPR__c &gt;=30,MPR__c &lt;=60) ,IMAGE(&quot;/servlet/servlet.FileDownload?file=01536000001TIou&quot;,&quot;Amber&quot;,25,25), 
(IF(MPR__c&gt; 60,IMAGE(&quot;/servlet/servlet.FileDownload?file=01536000001TIoz&quot;,&quot;Green&quot;,25,25),&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPR__c</fullName>
        <label>MPR</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mapping_Address__c</fullName>
        <label>Mapping_Address</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mapping_Status__c</fullName>
        <label>Mapping_Status</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Medicaid__c</fullName>
        <label>Medicaid</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medication</label>
        <referenceTo>Medication__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Benifit_Plan__c</fullName>
        <label>Member Benefits Plan</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Member ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nurse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nurse</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opioid_Risk__c</fullName>
        <formula>IF((Opioid_Score__c )  &gt; 80  ,IMAGE(&quot;/resource/1527506520000/Red?isdtp=p1&quot;,&quot;High&quot;),
IF((Opioid_Score__c ) &lt; 40,IMAGE(&quot;/resource/1527506520000/Green?isdtp=p1&quot;,&quot;Low&quot;),

IMAGE(&quot;/resource/1527506520000/Amber?isdtp=p1&quot;,&quot;Medium&quot;
)
)
)</formula>
        <label>Opioid Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opioid_Score__c</fullName>
        <formula>IF(  ( MME_Calculator__c == &apos;High&apos; ) , (Score__c + 15 + 5)  , IF  (( MME_Calculator__c == &apos;Medium&apos; )  ,(Score__c + 10 + 5), IF (( MME_Calculator__c == &apos;Low&apos; ) , ( Score__c + 5) , Score__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opioid Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDC_Status__c</fullName>
        <formula>IF(PDC__c&lt;30, IMAGE(&quot;/servlet/servlet.FileDownload?file=01536000001TIp4&quot;,&quot;Red&quot;,25,25), 
(IF( AND(PDC__c &gt;=30,PDC__c &lt;=60) ,IMAGE(&quot;/servlet/servlet.FileDownload?file=01536000001TIou&quot;,&quot;Amber&quot;,25,25), 
(IF(PDC__c&gt; 60,IMAGE(&quot;/servlet/servlet.FileDownload?file=01536000001TIoz&quot;,&quot;Green&quot;,25,25),&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDC Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDC__c</fullName>
        <label>PDC</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Peg_Risk_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Peg Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physician__c</fullName>
        <label>Physician</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preadolescent_Sexual_Abuse__c</fullName>
        <label>Preadolescent Sexual Abuse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_contact_mode__c</fullName>
        <label>Preferred contact mode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescription_drug_abuse__c</fullName>
        <label>Prescription drug abuse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Accout_id__c</fullName>
        <externalId>true</externalId>
        <label>Previous Accout id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Diag_Code__c</fullName>
        <label>Primary Diag Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risk_factor__c</fullName>
        <label>Risk factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_From_Date__c</fullName>
        <label>Service From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>WV</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>UT</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Units__c</fullName>
        <label>Total Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>